--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ a {
 .card-subtitle {
   text-transform: capitalize;
 }
-.car {
+.card {
   flex: 0.2 0 21%;
   margin-top: 5px;
   margin-right: 10px;
@@ -49,4 +49,12 @@ a {
 
 .moves-header{
   text-decoration: underline;
+}
+img {
+  width: 50px;
+  min-height: 50px;
+  float: left;
+  margin-bottom: 10px;
+  object-fit: none;
+  
 }
